# rak-basicstation

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Cross.toml  DEVELOPERS.md  Dockerfile  Dockerfile.release  LICENSE  Makefile  README.md  docker-compose.yml  shell.nix
.github/workflows/: release.yml
docker/: docker-entrypoint.sh  rak-basicstation.toml
docs/: LOADTEST_PLAN.md  PRD.md  REVANS01.md  REVPLAN01.md  REVREQ.md
examples/: README.md  fake_concentratord.rs  fake_concentratord.toml  load_test.rs
openwrt/luci-app-rak-basicstation/: Makefile
openwrt/luci-app-rak-basicstation/htdocs/luci-static/resources/view/rak/: rak-basicstation.js
openwrt/luci-app-rak-basicstation/root/usr/share/luci/menu.d/: luci-app-rak-basicstation.json
openwrt/rak-basicstation/: Makefile
openwrt/rak-basicstation/files/: rak-basicstation.config  rak-basicstation.init  rak-basicstation.sh
packaging/debian/: rak-basicstation.service  rak-basicstation.toml
packaging/docker/: rak-basicstation.toml
src/: config.rs  lib.rs  main.rs  metadata.rs
src/backend/: concentratord.rs  mod.rs
src/backend/semtech_udp/: mod.rs  structs.rs
src/cmd/: configfile.rs
src/cups/: client.rs  credentials.rs  mod.rs
src/lns/: discovery.rs  downlink.rs  messages.rs  mod.rs  router_config.rs  timesync.rs  uplink.rs  websocket.rs
