[package]
  name = "rak-basicstation"
  description = "RAK BasicStation Forwarder"
  repository = "https://github.com/RAKWireless/rak-basicstation"
  homepage = "https://www.rakwireless.com/"
  license = "MIT"
  version = "0.3.0"
  authors = ["RAKwireless"]
  edition = "2024"
  publish = false

[features]
  default = ["concentratord", "semtech_udp"]
  concentratord = ["dep:zmq"]
  semtech_udp = []

[dependencies]
  clap = { version = "4.5", default-features = false, features = [
    "std",
    "help",
    "usage",
    "derive",
  ] }
  chirpstack_api = { version = "4.16", default-features = false, features = [
    "json",
  ] }
  lrwn_filters = { version = "4.16", features = ["serde"] }
  serde_json = "1.0"
  serde = { version = "1.0", features = ["derive"] }
  humantime-serde = "1.1"
  log = "0.4"
  simple_logger = { version = "5.1", default-features = false, features = [
    "timestamps",
  ] }
  syslog = "7.0"
  anyhow = "1.0"
  toml = { version = "0.9", default-features = false, features = [
    "std",
    "parse",
    "serde",
  ] }
  chrono = { version = "0.4", default-features = false, features = ["now"] }
  signal-hook = "0.4"
  hex = "0.4"
  base64 = "0.22"
  getrandom = { version = "0.4", features = ["std"] }
  handlebars = "6.4"
  tokio = { version = "1.49", features = [
    "macros",
    "rt-multi-thread",
    "net",
    "process",
    "io-util",
    "sync",
    "time",
  ] }
  async-trait = "0.1"
  zmq = { version = "0.10", optional = true }
  tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
  futures-util = { version = "0.3", default-features = false, features = ["sink"] }
  rustls = { version = "0.23", default-features = false, features = [
    "logging",
    "std",
    "tls12",
    "ring",
  ] }
  rustls-native-certs = "0.8"
  rustls-pki-types = "1.12"
  reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "json",
  ] }
  crc32fast = "1.4"
  url = "2.5"

[dev-dependencies]

  # Debian packaging.
  [package.metadata.deb]
    assets = [
      [
        "target/release/rak-basicstation",
        "usr/bin/",
        "755",
      ],
      [
        "packaging/debian/rak-basicstation.toml",
        "etc/rak-basicstation/",
        "640",
      ],
    ]
    conf-files = [
      "/etc/rak-basicstation/rak-basicstation.toml",
    ]
    maintainer-scripts = "packaging/debian/"
    systemd-units = { enable = true }

[profile.release]
  strip = true
  opt-level = "z"
  lto = true
  codegen-units = 1
  panic = "abort"
